--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -15,7 +15,7 @@
 <sidebar>
   <aside>
     <ul class="lst">
-      <li><%= link_to "Add a New Article", new_article_path %></li>
+      <li><%= link_to "Add a New Bookmark", new_bookmark_path %></li>
     </ul>
   </aside>
 </sidebar>
