--- a/app/views/tool_sites/index.html.erb
+++ b/app/views/tool_sites/index.html.erb
@@ -5,7 +5,7 @@
     <%= render 'tools/header' %>
   <% end %>
   
-  <%= render :partial => "tools/menu" %>
+  <%= render :partial => "tools/nav" %>
   <%= render :partial => "tools/sites", :object => @usings %>
 </section>
 
