--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -19,7 +19,16 @@
 
 <sidebar>
   <aside>
-    <h3>Cancel my account</h3>
-    <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
+    <h3>My Account</h3>
+    <ul class="lst">
+      <li><a href="#">My Sites</a></li>
+      <li><a href="#">My Tools</a></li>
+      <li><a href="#">My Bookmarks</a></li>
+    </ul>
+  </aside>
+  <aside>
+    <h3>Delete My Account</h3>
+    <p>Unhappy? <%= link_to "Delete my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
+    <p>Canceling your account will not remove your work. It'll de-associate it with you, and all traces of your identify will be erased.
   </aside>
 </sidebar>
