--- a/app/views/site_articles/articles.html.erb
+++ b/app/views/site_articles/articles.html.erb
@@ -1,14 +1,10 @@
 <% title "Tools used by #{@site.title}" %>
 <section id="content" class="main site">
-  <% cache(["full", @site]) do %>
-    <%= render 'header' %>
+  <% cache(["header", @site]) do %>
+    <%= render 'sites/header' %>
   <% end %>
-  
-  <ul class="tabs">
-    <li><a href="<%= site_path(@site) %>" class="sites">Tools</a></li> 
-    <li class="current"><a href="#" class="articles">Articles</a></li> 
-    <li><a href="#" class="jobs">Jobs</a></li>
-  </ul>
+  <%= render 'sites/nav' %>
+
 
   <section class="tab">
     <% if @site.articles_count > 0 %>
