--- a/app/views/site_tools/_using.erb
+++ b/app/views/site_tools/_using.erb
@@ -1,11 +1,13 @@
 <li class="edit-in-place group ind using" id="using_<%= using.id %>" data-id="<%= using.id %>">
   <h4><%= link_to using.tool.name, using.tool %></h4>
-  <ul class="actions">
-    <li><%= link_to "edit", "#", :class => "edit-in-place-edit" %></li>
-    <li class="edit-in-place-cancel"><%= link_to "cancel", "#" %></li>
-    <li><%= link_to "remove", site_tools_path(@site, :using_id => using.id), :remote => true, :method => :delete %></li>
-  </ul>
-      
+  <% if current_user.claimed?(@site) || using.user_id == current_user.id || current_user.admin? %>
+    <ul class="actions">
+      <li><%= link_to "edit", "#", :class => "edit-in-place-edit" %></li>
+      <li class="edit-in-place-cancel"><%= link_to "cancel", "#" %></li>
+      <li><%= link_to "remove", using_path(using), :remote => true, :method => :delete %></li>
+    </ul>
+  <% end %>
+
   <%= semantic_form_for using, :remote => true, :method => :put, :html => { :id => "edit_using_#{using.id}" } do |form| %>
     <%= form.inputs do %>
       <li class="countdown"><span>140</span></li>
