--- a/app/views/site_tools/index.html.erb
+++ b/app/views/site_tools/index.html.erb
@@ -1,11 +1,4 @@
 <%= render 'sites/show' %>
-<sidebar>
-  <aside class="admin">
-    <h3>Admin Options</h3>
-    <ul class="lst">
-      <li><%= link_to "Edit this Site", edit_site_path(@site) %></li>
-      <li><%= link_to "Remove this Site", @site, :method => :delete, :confirmation => "Are you sure you want to delete this site." %></li>
-      <li><%= link_to "Manage Tools for this Site", new_site_tool_path(@site) %></li>
-    </ul>
-  </aside>
-</sidebar>
+<% cache(["sidebar", @site]) do %>
+  <%= render 'sites/show_sidebar' %>
+<% end %>
