--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,11 +1,4 @@
 <%= render 'show' %>
-<sidebar>
-  <aside class="admin">
-    <h3>Admin Options</h3>
-    <ul class="lst">
-      <li><%= link_to "Edit this Site", edit_site_path(@site) %></li>
-      <li><%= link_to "Remove this Site", @site, :method => :delete, :confirmation => "Are you sure you want to delete this site." %></li>
-      <li><%= link_to "Manage Tools for this Site", manage_site_tools_path(@site) %></li>
-    </ul>
-  </aside>
-</sidebar>
+<% cache(["sidebar", @site]) do %>
+  <%= render 'show_sidebar' %>
+<% end %>
