--- a/app/views/tools/_form.erb
+++ b/app/views/tools/_form.erb
@@ -1,13 +1,14 @@
-<%= semantic_form_for @tool, :format => params[:format], :html => { :multipart => true } do |f| %>
+<%= semantic_form_for @tool do |f| %>
+
   <%= f.inputs do %>
-    <%= f.input :url, :as => :string, :required => true, :label => "Unique URL for this Tool", :hint => "Definite source for this tool." %>
+    <%= f.input :url, :as => :string, :required => true, :label => "Enter the definitive URL for this Tool" %>
     <%= f.input :name, :as => :string, :required => true, :label => "Tool Name", :hint => "Just the name here." %>
     <%= f.input :language, :as => :select, :collection => Tool.languages.find(:all, :order => :name), 
                 :label => "Programming Language", :hint => "Primary language used. If multiple, select the main one." %>
     <%= f.input :categories, :as => :check_boxes, :required => false, :label => "Categories",
                 :collection => Category.order(:name), :hint => "Is this tool a database? A framework? A web service?" %>
     <%= f.input :description, :as => :text, :required => false, :input_html => { :rows => 5 },
-                :hint => "Few words about this tool. There's no limit here, so give as much info as you want." %>
+                :hint => "Few words about this tool. The first 140 characters are what matter." %>
   <% end %>
   <%= f.buttons do %>
     <%= f.commit_button %>
