--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -2,7 +2,37 @@
 
 <section id="content" class="main">
   <h2><%= @title %></h2>
+  <p>All tools in our system need a unique URL associated with them. This helps minimize duplicates and makes it easier for everyone to lookup more information about each tool.</p>
   <section>
-    <%= render 'form' %>
+    
+    <% if @link && @link.parsed? %>
+      <%= render :partial => "form" %>
+    <% else%>
+      <%= semantic_form_for @tool, :url => lookup_tools_path, :html => { :id => "lookup_tool", :remote => true } do |f| %>
+        <%= f.inputs do %>
+          <%= f.input :url, :as => :string, :required => true, :label => "Enter the definitive URL for this Tool" %>
+          <%= f.commit_button :label => "Step 2 >>", :id => "lookup_submit" %>
+          <li id="lookup_loading" style="display:none;"> <img src="/images/spinner.gif"/> We're looking up this tool, just a sec.</li>
+        <% end %>
+      <% end %>
+      <div id="edit_tool_form"></div>
+      
+      <% javascript do %>
+      var checkForLookup = false
+      $(function() {
+        $("#lookup_tool").submit(function() {
+          if(!checkForLookup) {
+            $("#lookup_tool input.create").attr("disabled", "disabled");
+            $("#lookup_loading").show();
+            checkForLookup = setInterval("resubmit_lookup()", 5000);
+          }
+        });
+      })
+      
+      function resubmit_lookup() {
+        $("#lookup_tool").submit();
+      }
+      <% end %>
+    <% end %>
   </section>
 </section>
