Updated for sites/tools tabs

--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -58,8 +58,10 @@ body.site_tools-manage li.site_tools-manage a:link, body.site_tools-manage li.si
 body.tools-show li.tools-show a:link, body.tools-show li.tools-show a:visited,
 body.tools-edit li.tools-edit a:link, body.tools-edit li.tools-edit a:visited,
 body.tool_sites-new li.tool_sites-new a:link, body.tool_sites-new li.tool_sites-new a:visited,
-body.tool_sites-index li.tool_sites-index a:link, body.tool_sites-index li.tool_sites-index a:visited
- 
-  
- 
+body.tool_sites-index li.tool_sites-index a:link, body.tool_sites-index li.tool_sites-index a:visited,
+body.site_claims-create li.site_claims-create a:link, body.site_claims-create li.site_claims-create a:visited,
+body.tool_sites-manage li.tool_sites-manage a:link, body.tool_sites-manage li.tool_sites-manage a:visited
+
+
+
 { border-bottom: 1px solid #fff; background: #fff; color: #000; }
