--- a/app/views/tools/_nav.html.erb
+++ b/app/views/tools/_nav.html.erb
@@ -3,6 +3,6 @@
   <% if @tool.articles_count > 0 %><li><a href="<%= bookmarks_tool_path(@tool) %>" class="bookmarks">Bookmarks</a></li><% end %>
   <% if user_signed_in? %>
     <li class="right tools-edit"><%= link_to "Edit", edit_tool_path(@tool) %></li> 
-    <li class="right tool_sites-new"><%= link_to "Add sites", new_tool_site_path(@tool) %></li> 
+    <li class="right tool_sites-manage"><%= link_to "Add sites", manage_tool_sites_path(@tool) %></li> 
   <% end %>
 </ul>
