--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -1,8 +1,8 @@
 .clear { clear:both; }
 .right { float:right; }
 p.breadcrumbs { font-size:.8em; }
-a.add { background:url(/images/icons/13-plus.png) no-repeat; padding-left:20px; }
-a.remove { background:url(/images/icons/14-minus.png) no-repeat 0 7px; padding-left:20px; }
+a.add { background:url(http://s.lineofthought.com.s3.amazonaws.com/images/icons/13-plus.png) no-repeat; padding-left:20px; }
+a.remove { background:url(http://s.lineofthought.com.s3.amazonaws.com/images/icons/14-minus.png) no-repeat 0 7px; padding-left:20px; }
 img.screenshot, .screenshot img { border: 1px solid #ccc; float:left; }
 a.external { font-size:1em; }
 a:link, a:visited { color:#3792B3; font-weight:bold; outline-color:-moz-use-text-color; outline-style:none; outline-width:medium; text-decoration:none; }
@@ -29,8 +29,8 @@ ul.tabs a:hover { background-color: #fff;	}
 /* Sorting options */
 #sorting { float:right; position:relative; width:250px; }
 #sorting p { float:right; width:100%; text-align:right; }
-#sorting p a { background:url(/images/icons/13-plus.png) no-repeat right; display:block; width:14px; height:14px; float:right; margin-left:10px; }
-#sorting p a.active { background:url(/images/icons/14-minus.png) no-repeat right; }
+#sorting p a { background:url(http://s.lineofthought.com.s3.amazonaws.com/images/icons/13-plus.png) no-repeat right; display:block; width:14px; height:14px; float:right; margin-left:10px; }
+#sorting p a.active { background:url(http://s.lineofthought.com.s3.amazonaws.com/images/icons/14-minus.png) no-repeat right; }
 #sorting ul.options { background-color:#F1F1F1; padding:10px; float:right; z-index:1; clear:left; border: 3px solid #e3e3e3; clear:both; position:absolute; top:20px; border-radius:8px; -moz-border-radius: 8px; width:200px; right:0; }
 
 
