--- a/app/views/bookmarks/_form.erb
+++ b/app/views/bookmarks/_form.erb
@@ -1,10 +1,10 @@
-<%= semantic_form_for @article, :format => params[:format] do |f| %>
+<%= semantic_form_for @bookmark, bookmarks_path, :format => params[:format] do |f| %>
   <%= f.inputs do %>
-    <%= f.input :url, :as => :string, :required => true, :label => "Article URL" %>
+    <%= f.input :url, :as => :string, :required => true, :label => "Bookmark URL" %>
     <%= f.input :title, :as => :string, :required => true, :label => "Site Title" %>
     <%= f.input :description, :as => :text, :required => false, :label => "About this Site", :input_html => { :rows => 3 } %>
-    <%= f.input :tool_ids, :as => :string, :wrapper_html => { :class => "tokeninput inline-tokenlist" }, :label => "Tools Mentioned", :hint => "Start typing a tool name, or type the complete name.", :input_html => { :name => "article[tool_ids][]" } %>
-    <%= f.input :site_ids, :as => :string, :wrapper_html => { :class => "tokeninput inline-tokenlist" }, :label => "Sites Mentioned", :hint => "Start typing a site URL or site name.", :input_html => { :name => "article[site_ids][]" } %>
+    <%= f.input :tool_ids, :as => :string, :wrapper_html => { :class => "tokeninput inline-tokenlist" }, :label => "Tools Mentioned", :hint => "Start typing a tool name, or type the complete name.", :input_html => { :name => "bookmark[tool_ids][]" } %>
+    <%= f.input :site_ids, :as => :string, :wrapper_html => { :class => "tokeninput inline-tokenlist" }, :label => "Sites Mentioned", :hint => "Start typing a site URL or site name.", :input_html => { :name => "bookmark[site_ids][]" } %>
   <% end %>
   <%= f.buttons do %>
     <%= f.commit_button %>
@@ -22,7 +22,7 @@ var tool_token_options = {
     defaultOptions: <%= raw Tool.for_autocomplete.to_json %>
 };
 $(function() {
-  $("#article_tool_ids").tokenInput('<%= autocomplete_tools_path %>', tool_token_options).focus();
-  $("#article_site_ids").tokenInput('<%= autocomplete_sites_path %>', site_token_options)
+  $("#bookmark_tool_ids").tokenInput('<%= autocomplete_tools_path %>', tool_token_options).focus();
+  $("#bookmark_site_ids").tokenInput('<%= autocomplete_sites_path %>', site_token_options)
 });
 <% end %>
