--- a/app/views/tools/_header.erb
+++ b/app/views/tools/_header.erb
@@ -4,7 +4,7 @@
       <h4><% if @tool.has_favicon? %><a href="<%=@tool.url%>" rel="nofollow" class="favicon"><img src="<%= @tool.full_favicon_url %>" /></a><% end %><%= link_to @tool.name, @tool.url, :target => "_blank", :rel => "nofollow" %></h4>
       <ul class="count">
         <li class="sites"><%= link_to pluralize(@tool.sites_count, "site"), @tool %></li>
-        <li class="links"><%= link_to pluralize(@tool.articles_count, "bookmark"), @tool %></li>
+        <li class="links"><%= link_to pluralize(@tool.bookmarks_count, "bookmark"), @tool %></li>
       </ul>
       <%= content_tag(:p, @tool.description) unless @tool.description.blank? %>
       <%= content_tag(:p, link_to(@tool.url, @tool.url, :target => "_blank", :rel => "nofollow")) unless @tool.url.blank? %>
